[package]
name = "CheapJio"
version = "0.1.0"
edition = "2021"

[dependencies]
timer = "0.2.0"
chrono = "0.4.39"
env_logger = "0.11.5"
log = "0.4.22"
log4rs = "1.3.0"
simple_logger = "5.0.0"
warp = "0.3"
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = {version="1.43.0", features = ["macros", "rt-multi-thread"]}
